--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body{
 
 h1{
     text-transform: uppercase;
-    border-bottom: 5px solid #ffca37;
+    border-bottom: 5px solid #4a0d0b;
     text-align: center;
 }
 
@@ -42,24 +42,24 @@ h1{
     font-size: 30px;
     text-transform: uppercase;
     font-weight: 500;
-    border: 3px solid black;
+    border: 3px solid #4a0d0b;
 }
 .country a{
-    background-color: rgb(255, 201, 6);
+    background-color: #f0db72;
     padding: 5px;
 }
 a{
     text-decoration: none;
-    color: black;
+    color: #4a0d0b;
 }
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(240, 227, 172);
+    background-color: #d9a851;
 }
  .q{
-    background-color: rgb(255, 225, 103);
+    background-color: #fdfab5;
 } 
 
 
@@ -391,4 +391,29 @@ header{
     font-size: 25px;
     border-left: #8e7120 solid 3px;
     padding-left: 10px;
+  }
+
+  .container{
+    background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFX6j-snUlBmt8VwQANs2n2mdvX0qNuFaLig&s");
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+  }
+
+  .m-block,  .map_places{
+    padding-left: 100px;
+    max-width: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    text-align: center;
+    gap: 20px;
+  }
+ .map_places h3{
+  font-size: 40px;
+    background-color: #dfad16;
+  }
+  .container2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
